[package]
name = "mcp-artifact-store"
version = "1.0.0"
edition = "2024"
authors = ["James Karanja Maina <james.karanja@zavora.ai>"]
license = "Apache-2.0"
description = "Artifact Store MCP server for ADK-Rust Enterprise — governed artifact registry with provenance, integrity, and policy-driven lifecycle"
repository = "https://github.com/zavora-ai/mcp-artifact-store"
homepage = "https://enterprise.adk-rust.com"
documentation = "https://docs.rs/mcp-artifact-store"
keywords = ["mcp", "artifacts", "registry", "provenance", "enterprise"]
categories = ["development-tools", "filesystem"]
rust-version = "1.85"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["local"]
local = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
gcs = ["dep:reqwest", "dep:gcp_auth"]
all-backends = ["local", "s3", "gcs"]

[dependencies]
adk-mcp-sdk = "0.1.0"
rmcp = { version = "1.7", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
schemars = "1"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# S3
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# GCS
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
gcp_auth = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.24"
